css/index.css
:root {
  --red: #c4c4c4;
  --darkred: #7d7d7d;
  --lightgray: #e0e0e0;
  --gray: #C0C0C0;
  --darkgray: #333;
  --navy: #17050F;
  --blue: #404040;
  --white: #fff;
}

* {
  box-sizing: border-box;
}

html {
  overflow-x: hidden;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Lato', sans-serif;
  color: var(--darkgray);
  background-color: var(--white);
}

body {
  font-size: 1.1875rem;
  overflow-wrap: break-word;
}

iframe {
  width: 100%;
  border: none;
}

main .h1--post + p::before,
main h1 + p > img {
  content: '';
  display: block;
  width: 100vw;
  max-width: none;
  height: 60vmin;
  margin-left: calc((100vw - 100%) / -2);
  margin-right: calc((100vw - 100%) / -2);
  object-fit: cover;
  object-position: 50% 15%;
}

main .h1--post {
  position: absolute;
  z-index: 1;
  display: flex;
  align-items: flex-end;
  height: 60vmin;
  margin: 0;
  margin-right: calc((100vw - 100%) / -2);
  padding: 1rem 0;
  color: #fff;
  text-shadow: 0 0 4px #000;
}

main .h1--post + p {
  position: relative;
  margin-top: 0;
}

main .h1--post + p::before {
  position: absolute;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
  box-shadow: inset 0 -0.5vw 0.5vw 0 rgba(0, 0, 0, 0.25), inset 0 0.5vw 0.5vw 0 rgba(0, 0, 0, 0.25);
  mix-blend-mode: darken;
}

main h1 + p > img[src*="schepp-2019"] {
  width: 33vmin;
  height: 33vmin;
  object-fit: cover;
  object-position: center center;
  margin: 0 auto;
  border-radius: 50%;
}

.video {
  position: relative;
  width: 100%;
  padding-top: calc((9 / 16) * 100%);
}

.video > iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

* {
  scrollbar-color: #7f7f7f transparent; /* thumb and track color */
  scrollbar-width: thin;
}

*::-webkit-scrollbar {
  width: 7.5px;
}

*::-webkit-scrollbar-track {
  background: transparent;
}

*::-webkit-scrollbar-thumb {
  background: #7f7f7f;
  border-right: 1px solid white;
}

body {
  position: relative;
  max-width: 40rem;
  margin: auto;
}

p:last-child {
  margin-bottom: 0;
}

p,
.tmpl-post li,
img, video {
  max-width: 100%;
  height: auto;
}

img, video {
  display: block;
  margin: 0 auto;
  border: 1px solid #ccc;
}

p,
.tmpl-post li {
  line-height: 1.45;
}

a[href] {
  color: var(--blue);
}

a[href]:visited {
  color: var(--navy);
}

main {
  padding: 0 1rem 1rem 1rem;
}

main :first-child {
  margin-top: 0;
}

header:after {
  content: "";
  display: table;
  clear: both;
}

ul {
  padding-left: 1em;
}

a {
  text-decoration-color: dodgerblue;
  text-decoration-width: 4px;
}

table {
  margin: 1em 0;
}

table td,
table th {
  padding-right: 1em;
}

pre,
code {
  padding: 0 0.25em;
  background-color: #fff0b2;
  border-radius: 2px;
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}

code {
  font-size: inherit !important;
}

pre {
  font-size: 1rem !important;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
}

pre[class*="language"][class*="language"] {
  padding: 1.5em 0.5em;
}

.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none; /* override del, ins, mark defaults */
  color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: "";
}

/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}

.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}

.highlight-line-add {
  background-color: #45844b;
}

.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
.home {
  padding: 0 1rem;
  float: left;
  margin: 1rem 0; /* 16px /16 */
  font-size: 1.4rem;
}

.home :link:not(:hover) {
  text-decoration: none;
}

/* Nav */
.nav {
  padding: 0;
  list-style: none;
  float: left;
  margin-left: 1em;
}

.nav-item {
  display: inline-block;
  margin-right: 1em;
}

.nav-item a[href]:not(:hover) {
  text-decoration: none;
}

.nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}

.postlist-item {
  counter-increment: start-from -1;
}

.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}

.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--darkgray);
}

.postlist-date {
  word-spacing: -0.5px;
}

.postlist-link {
  display: inline-block;
  padding: 0.25em 0.1875em; /* 4px 3px /16 */
}

.postlist-item-active .postlist-link {
  font-weight: 700;
}

.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
}

/* Tags */
.tag:not(.token) {
  display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
  font-size: 0.625em; /* 10px /16 */
  padding: 2px 4px;
  margin-left: 0.8em; /* 8px /10 */
  background-color: var(--red);
  color: var(--white);
  border-radius: 0.25em; /* 3px /12 */
  text-decoration: none;
}

a[href].tag,
a[href].tag:visited {
  color: #fff;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}

.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}

a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}

a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

.me {
  display: block;
  list-style: none;
  margin: 0;
  padding: 1em;
  border-top: 2px solid #333;
}

.me li {
  display: inline-block;
  padding-right: 1em;
}

twitter-widget {
  margin-left: auto;
  margin-right: auto;
}

li {
  margin-bottom: 0.7em;
}

blockquote {
  position: relative;
  margin: 2em 0;
  padding: 0 2em 0 2.5em;
  color: #444;
  font-family: 'Merriweather', serif;
  font-style: normal;
  font-size: 0.9em;
  line-height: 1.2;
  quotes: "“" "”" "‘" "’";
}

blockquote::before,
blockquote::after {
  position: absolute;
  font-size: 300%;
}

blockquote::before {
  content: open-quote;
  top: -0.1em;
  left: 0;
}

blockquote::after {
  content: close-quote;
  right: 0;
  bottom: -0.6em;
}

.multicolumn {
  padding: 0.5rem;
  column-width: 10rem;
  column-gap: 0.1rem;
  background-color: #f3f3f3;
  font-size: 0.8em;
}

.multicolumn ul {
  margin: 0 1rem;
  padding: 0;
}

.side-by-side {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.side-by-side > * {
  flex: 1 1 auto;
}

.side-by-side > pre {
  flex: 1 0 auto;
}

figure {

}

figcaption {
  font-size: 0.7em;
}

